prevent duplicate labels on checkbox / radio options; allow getRef to optionally return icon classnames only; icon-only file upload controls no longer accept drag-and-drop and are much more compact; additional classname support added to UI/Search; top/bottom border removed from UI/Collapsible; Canvas now automatically recognises '%IconRef' fields and adds "iconOnly" prop; fix minor (but irritating) border-radius issue on form controls; prevent injected <br/> causing an additional vertical scrollbar to appear; Added bodyJson propType to canvas

--- a/UI/Bootstrap/Core/forms/form-control.30.scss
+++ b/UI/Bootstrap/Core/forms/form-control.30.scss
@@ -17,7 +17,8 @@
   appearance: none; // Fix appearance for date inputs in Safari
 
   // Note: This has no effect on <select>s in some browsers, due to the limited stylability of `<select>`s in CSS.
-  @include border-radius($input-border-radius, 0);
+  //@include border-radius($input-border-radius, 0);
+  border-radius: $input-border-radius;
 
   @include box-shadow($input-box-shadow);
   @include transition($input-transition);
